:wrench: パスワードリセットページ修正

--- a/sass/layout/_password.scss
+++ b/sass/layout/_password.scss
@@ -1,81 +1,131 @@
 @charset "utf-8";
 
-.confirm-body{
+.confirm-body {
     max-width: 1333px;
     margin: auto;
 }
 
-.confirm-body-box{
+.confirm-body-box {
     // TODO 省略可能 @shin
-    margin-top: 100px;
     margin-left: 25%;
     margin-right: 25%;
     padding: 30px 5%;
     font-size: 20px;
     background-color: $white-color;
-    margin-bottom: 360px;
-    @include mq(tab){
+    margin-bottom: 300px;
+    border-bottom: 10px solid $primary-color;
+
+
+    @include mq(tab) {
         // TODO 省略可能 @shin
         margin-top: 50px;
         margin-left: 15%;
         margin-right: 15%;
-        padding: 20px 5%; 
+        padding: 20px 5%;
         font-size: 15px;
         margin-bottom: 50px;
     }
-    @include mq(sp){
+
+    @include mq(sp) {
         // TODO 省略可能 @shin
         margin-top: 50px;
         margin-left: 10%;
         margin-right: 10%;
-        padding: 20px 5%; 
+        padding: 20px 5%;
         font-size: 15px;
         margin-bottom: 50px;
     }
 }
 
-.confirm-body-title{
+.confirm-body-title {
     text-align: center;
-    border-bottom: solid 1px $black-color;
+    font-size: 30px;
     color: $black-color;
-} 
 
-.confirm-body-input{
+    @include mq(tab) {
+        padding-top: 20px;
+        padding-bottom: 10px;
+    }
+
+    @include mq(sp) {
+        padding-top: 20px;
+        padding-bottom: 10px;
+        font-size: 25px;
+        color: $black-color;
+    }
+
+}
+
+.confirm-body-input {
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
-    font-size: 0.8em;
-    input{
-        padding: 5px;
-        border: solid 1px $border-color;
-        border-radius: 5px;
-        width: auto;
-        margin: 10px 20px;
+    font-size: 20px;
+
+
+    tr {
+        td {
+            label {
+                color: $black-color;
+            }
+
+            input {
+                border: solid 1px $border-color;
+                border-radius: 5px;
+                color: $black-color;
+                padding: 10px 0.5rem;
+                margin: 10px 10px;
+                width: auto;
+            }
+        }
     }
-    @include mq(tab){
+
+    @include mq(tab) {
         margin-top: 20px;
         margin-left: 5%;
         margin-right: 5%;
+
     }
-    @include mq(sp){
+
+    @include mq(sp) {
         margin-top: 20px;
-        margin-left: 5%;
-        margin-right: 5%;
+        font-size: 15px;
+        margin-left: 10%;
+
+        tr {
+            td {
+                label {
+                    font-size: 0.6em;
+                    color: $black-color;
+                    margin-right: 1rem;
+                }
+
+                input {
+                    border: solid 1px $border-color;
+                    border-radius: 5px;
+                    padding: 5px 0.5rem;
+                    margin: 5px 10px;
+                    width: 70%;
+                }
+            }
+        }
     }
 }
 
-.reset-password{
+.reset-password {
     text-align: center;
     margin-top: 20px;
-    .reset-button{
+
+    .reset-button {
         background-color: $primary-color;
         color: $white-color;
         font-size: 20px;
         border-radius: 5px;
         padding: 10px;
     }
-    .reset-button:hover{
+
+    .reset-button:hover {
         background-color: $primary-h-color;
     }
 }
