--- a/sass/layout/_password.scss
+++ b/sass/layout/_password.scss
@@ -3,17 +3,15 @@
 .confirm-body {
     max-width: 1333px;
     margin: auto;
+    font-family: $secondary-family-ie;
 }
 
 .confirm-body-box {
-    // TODO 省略可能 @shin
-    margin-left: 25%;
-    margin-right: 25%;
-    padding: 30px 5%;
-    font-size: 20px;
+    font-family: $secondary-family-ie;
     background-color: $white-color;
-    margin-bottom: 300px;
     border-bottom: 10px solid $primary-color;
+    width: 500px;
+    margin: 0 auto 180px auto;
 
 
     @include mq(tab) {
@@ -23,22 +21,20 @@
         margin-right: 15%;
         padding: 20px 5%;
         font-size: 15px;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
     }
 
     @include mq(sp) {
-        // TODO 省略可能 @shin
-        margin-top: 50px;
-        margin-left: 10%;
-        margin-right: 10%;
-        padding: 20px 5%;
-        font-size: 15px;
-        margin-bottom: 50px;
+        width: auto;
+        border-bottom: 5px solid $primary-color;
+        margin: 0 5% 50px 5%;
     }
 }
 
 .confirm-body-title {
     text-align: center;
+    padding-top: 35px;
+    padding-bottom: 15px;
     font-size: 30px;
     color: $black-color;
 
@@ -51,17 +47,14 @@
         padding-top: 20px;
         padding-bottom: 10px;
         font-size: 25px;
-        color: $black-color;
     }
 
 }
 
 .confirm-body-input {
-    margin-top: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: center;
     font-size: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 
 
     tr {
@@ -75,28 +68,27 @@
                 border-radius: 5px;
                 color: $black-color;
                 padding: 10px 0.5rem;
-                margin: 10px 10px;
-                width: auto;
+                margin: 10px 5px;
+                width: 370px;
             }
         }
     }
 
     @include mq(tab) {
-        margin-top: 20px;
-        margin-left: 5%;
-        margin-right: 5%;
+        width: 500px;
+        margin: 0 auto 100px auto;
 
     }
 
     @include mq(sp) {
-        margin-top: 20px;
         font-size: 15px;
-        margin-left: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
 
         tr {
             td {
                 label {
-                    font-size: 0.6em;
+                    font-size: 0.7em;
                     color: $black-color;
                     margin-right: 1rem;
                 }
@@ -106,7 +98,7 @@
                     border-radius: 5px;
                     padding: 5px 0.5rem;
                     margin: 5px 10px;
-                    width: 70%;
+                    width: 40%;
                 }
             }
         }
@@ -116,6 +108,7 @@
 .reset-password {
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 40px;
 
     .reset-button {
         background-color: $primary-color;
