:wrench: passwordリセットページ修正

--- a/sass/layout/_list.scss
+++ b/sass/layout/_list.scss
@@ -6,7 +6,7 @@
     &__title{
         margin-top: 50px;
         font-size: 30px;
-        color: $white-color;
+        color: $black-color;
     }
     &__links{
         padding-left: 5%;
