--- a/sass/layout/_password.scss
+++ b/sass/layout/_password.scss
@@ -10,7 +10,7 @@
     font-family: $secondary-family-ie;
     background-color: $white-color;
     border-bottom: 10px solid $primary-color;
-    width: 500px;
+    width: 800px;
     margin: 0 auto 180px auto;
 
 
@@ -53,8 +53,8 @@
 
 .confirm-body-input {
     font-size: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
 
 
     tr {
@@ -113,9 +113,9 @@
     .reset-button {
         background-color: $primary-color;
         color: $white-color;
-        font-size: 20px;
+        font-size: 1.5em;
         border-radius: 5px;
-        padding: 10px;
+        padding: 10px 70px;
     }
 
     .reset-button:hover {
