:wrench: マイページのサイドメニュー微調整

--- a/sass/layout/_mypageinfo.scss
+++ b/sass/layout/_mypageinfo.scss
@@ -10,7 +10,7 @@
     background-color: $white-color;
     color: $black-color;
     width: 800px;
-    margin: 50px auto 80px auto;
+    margin: 50px auto 80px 450px;
     padding: 20px;
     border-radius: 20px;
     font-size: 20px;
