--- a/sass/layout/_preview.scss
+++ b/sass/layout/_preview.scss
@@ -316,4 +316,235 @@
             padding: 5px 0.5em;
         }
     }
+    
+}
+
+// skill preview//
+
+.account-skill-preview{
+    .skill-section{
+        &__title{
+            border-bottom: solid 2px $border-color;
+        }
+        &__contents{
+            margin: 20px 0 30px 1rem;
+            font-size: 0.9em;
+        }
+        &__image{
+            width: 160px;
+            height: 200px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &__bottom{
+            margin-left: 2rem;
+        }
+        &__text{
+            border: solid 2px $border-color;
+            border-radius: 2px; 
+            padding: 5px 0.5em;
+            height: 70px;
+        }
+    }
+    .work-skill{
+        font-size: 0.8em;
+        &__title{
+            font-size: 0.9em;
+        }
+        &__wrap{
+            font-size: 0.9em;
+        }
+        .works__section-title::after{
+            display: none;
+        }
+    }
+    .rank-base {
+        margin: 30px 0;
+        .rank-base-title {
+            font-size: 1em;
+            color: $black-color;
+    
+            img {
+                width: 20px;
+                height: 20px;
+                margin-right: 1%;
+                margin-bottom: 5px;
+            }
+        }
+    
+        table {
+            font-size: 0.8em;
+            .rankBase {
+                &__top {
+                    border-top: none;
+                    border-color: $border-color;
+                    color: $black-color;
+                    padding: 15px 90px;
+    
+                    &_left {
+                        border-color: $border-color;
+                        border-left: none;
+                        border-top: none;
+                    }
+    
+                    &_right {
+                        color: $fourth-color;
+                        border-color: $border-color;
+                        border-right: none;
+                        border-top: none;
+    
+                    }
+                }
+    
+                &__left {
+                    border-left: none;
+                    border-color: $border-color;
+                    color: $black-color;
+                    padding: 15px 20px;
+    
+                    &_A {
+                        color: $primary-color;
+                        border-color: $border-color;
+                        border-left: none;
+                        padding: 15px 20px;
+                    }
+                }
+    
+                &__middle {
+                    color: $black-color;
+                    border-color: $border-color;
+                }
+    
+                &__right {
+                    border-right: none;
+                    border-color: $border-color;
+                    padding: 15px 50px;
+                    color: $fourth-color;
+                }
+    
+                &__bottom {
+                    border-bottom: none;
+                    border-color: $border-color;
+                    color: $black-color;
+                    padding: 15px 130px;
+    
+                    &_left {
+                        border-left: none;
+                        border-bottom: none;
+                        border-color: $border-color;
+                        color: $black-color;
+                    }
+    
+                    &_right {
+                        border-right: none;
+                        border-bottom: none;
+                        border-color: $border-color;
+                        color: $fourth-color;
+                    }
+                }
+            }
+    
+            td {
+                border-style: dashed;
+                border-width: 2px;
+                text-align: center;
+            }
+        }
+        @include mq(tab){
+            .rank-base-title {
+                font-size: 1.1em;
+                color: $black-color;
+    
+                img {
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 1%;
+                    margin-bottom: 5px;
+                }
+            }
+    
+            table {
+                font-size: 1em;
+    
+                // TODO: 重複コードあり userspecialities.scss @shin
+                .rankBase {
+                    &__top {
+                        border-top: none;
+                        border-color: $border-color;
+                        color: $black-color;
+                        padding: 5px 5px;
+    
+                        &_left {
+                            border-color: $border-color;
+                            border-left: none;
+                            border-top: none;
+                        }
+    
+                        &_right {
+                            color: $fourth-color;
+                            border-color: $border-color;
+                            border-right: none;
+                            border-top: none;
+    
+                        }
+                    }
+    
+                    &__left {
+                        border-left: none;
+                        border-color: $border-color;
+                        color: $black-color;
+                        padding: 5px 5px;
+    
+                        &_A {
+                            color: $primary-color;
+                            border-color: $border-color;
+                            border-left: none;
+                            padding: 5px 5px;
+                        }
+                    }
+    
+                    &__middle {
+                        color: $black-color;
+                        border-color: $border-color;
+                    }
+    
+                    &__right {
+                        border-right: none;
+                        border-color: $border-color;
+                        padding: 5px 5px;
+                        color: $fourth-color;
+                    }
+    
+                    &__bottom {
+                        border-bottom: none;
+                        border-color: $border-color;
+                        color: $black-color;
+                        padding: 5px 5px;
+    
+                        &_left {
+                            border-left: none;
+                            border-bottom: none;
+                            border-color: $border-color;
+                            color: $black-color;
+                        }
+    
+                        &_right {
+                            border-right: none;
+                            border-bottom: none;
+                            border-color: $border-color;
+                            color: $fourth-color;
+                        }
+                    }
+                }
+    
+                td {
+                    border-style: dashed;
+                    border-width: 1px;
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
