--- a/sass/layout/_preview.scss
+++ b/sass/layout/_preview.scss
@@ -98,18 +98,14 @@
 
         .account-info-input {
 
-            // TODO: 重複コードあり mypageinfo.scss @shin
-            label {
-                font-size: 1em;
-            }
-
             p {
-                padding: 1em;
-                border: solid 0.1px $border-color;
+                padding: 0 0.5em 30px 0.5em;
+                border: solid 1px $border-color;
                 border-radius: 5px;
                 margin: 30px 20%;
                 width: 25rem;
-                height: 20px;
+                height: 30px;
+                font-size: 0.9em;
             }
 
         }
@@ -129,6 +125,7 @@
             margin-bottom: 20px;
             padding: 20px 20%;
             border-radius: 20px;
+            border-bottom: none;
         }
 
         a:hover {
@@ -157,16 +154,9 @@
             margin-right: 5%;
 
             .account-info-input {
-                label {
-                    font-size: 1em;
-                }
-
-                // .icon-required {
-                //     width: 100px;
-                // }
 
                 p {
-                    padding: 0.3em;
+                    padding: 0 0.5em 25px 0.5em;
                     border: solid 1px $border-color;
                     border-radius: 5px;
                     margin: 20px 5%;
@@ -225,16 +215,8 @@
             }
 
             .account-info-input {
-                label {
-                    font-size: 1em;
-                }
-
-                // .icon-required {
-
-                // }
 
                 p {
-                    padding: 0.3em;
                     border: solid 1px $border-color;
                     border-radius: 5px;
                     margin: 10px 5%;
