--- a/sass/layout/_userresume.scss
+++ b/sass/layout/_userresume.scss
@@ -461,7 +461,9 @@ textarea {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-
+    border-bottom: solid $border-color;
+    padding-bottom: 5px;
+    margin-bottom: 30px;
     &.-disabled {
         display: none;
     }
